# libCLogger

./: .gitmodules  .travis.yml  CLogger.hpp  CMakeLists.txt  LICENSE  NOTICE  README.md
Include/: CLogger.hpp  CLoggerCapture.hpp  CLoggerCore.hpp  CLoggerDefaultBackEnd.hpp  CLoggerDefaultFrontEnd.hpp  CLoggerLog.hpp  CLoggerMessage.hpp  CLoggerSinkBase.hpp  CLoggerVer.hpp  CLoggerWorker.hpp  CloggerBackendBase.hpp  CloggerSinkBase.hpp
Include/Utils/: DevMacros.hpp  Typedefs.hpp
Src/: CLogger.cpp  CLoggerCapture.cpp  CLoggerCore.cpp  CLoggerDefaultBackEnd.cpp  CLoggerSinkBase.cpp  CLoggerWorker.cpp  CloggerBackendBase.cpp  CloggerSinkBase.cpp
Tests/: CMakeLists.txt  main.cpp
Utils/: Typedefs.hpp
include/: Assert.hpp  CLogger.hpp  CLoggerImpl.hpp  CLoggerMessage.hpp  CLoggerVer.hpp  LogCapture.hpp  LogLevel.hpp  LogMessage.hpp  Singleton.hpp  Sink.hpp
include/Tools/: ConcurrentQueue.h
include/sinks/: File.hpp  StdOut.hpp
src/: CLogger.cpp  CLoggerDefaultBackEnd.cpp
test/: test.cpp
